Bug 508750 - Operating System category symbolic icon is red on Fedora Kinoite
Summary: Operating System category symbolic icon is red on Fedora Kinoite
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: rpm-ostree Backend (other bugs)
Version First Reported In: 6.4.4
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-26 08:14 UTC by Justin Zobel
Modified: 2025-08-28 14:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
Screenshot (39.20 KB, image/png)
2025-08-27 01:10 UTC, Justin Zobel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2025-08-26 08:14:46 UTC
Operating System category symbolic icon is red on Fedora Kinoite

OBSERVED RESULT
Operating System category symbolic icon is red on Fedora Kinoite

EXPECTED RESULT
Operating System category symbolic icon is monochrome like the rest

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.15.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 32 GiB of RAM (31.3 GiB usable)
Graphics Processor: AMD Radeon RX 7600
Comment 1 Timothée Ravier 2025-08-26 08:20:28 UTC
I can confirm it. I don't know why this is still happening as we "fixed" the icon a while back. Maybe we forgot to switch it in the code? Or maybe the old one is cached on systems still?
Comment 2 Nate Graham 2025-08-26 19:55:08 UTC
Where? Can you attach a screenshot?
Comment 3 Justin Zobel 2025-08-27 01:10:35 UTC
Created attachment 184490 [details]
Screenshot

It appears in the left side bar.
Comment 4 Nate Graham 2025-08-27 15:49:06 UTC
The problem is here: https://invent.kde.org/plasma/discover/-/blob/master/libdiscover/backends/RpmOstreeBackend/rpm-ostree-backend-categories.xml?ref_type=heads#L5

It's asking for application-x-rpm, which is a colorful MIME type icon, so it gets colored in Discover's sidebar.

If you don't want a colored icon, you should probably pick a different one.
Comment 5 Bug Janitor Service 2025-08-28 02:20:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1147
Comment 6 Nate Graham 2025-08-28 14:01:06 UTC
Git commit f15a4efbdea10157324aa8fc9dbbeaaaa97ca1a2 by Nate Graham, on behalf of Justin Zobel.
Committed on 28/08/2025 at 14:01.
Pushed by ngraham into branch 'master'.

RPM-OStree Backend: Use black symbolic RPM icon
FIXED-IN: 6.5.0

M  +2    -2    libdiscover/backends/RpmOstreeBackend/RpmOstreeResource.cpp
M  +1    -1    libdiscover/backends/RpmOstreeBackend/RpmOstreeTransaction.cpp
M  +1    -1    libdiscover/backends/RpmOstreeBackend/rpm-ostree-backend-categories.xml

https://invent.kde.org/plasma/discover/-/commit/f15a4efbdea10157324aa8fc9dbbeaaaa97ca1a2