RPM-OStree Backend: Use black symbolic RPM icon

BUG: 508750
FIXED-IN: 6.5.0